--- a/src/lib/i18n/locales/ja.json
+++ b/src/lib/i18n/locales/ja.json
@@ -102,7 +102,8 @@
   },
   "main": {
     "title": "のすとびうあ",
-    "input_public_key": "🔑公開鍵(public key)"
+    "input_public_key": "🔑公開鍵(public key)",
+    "publish": "(署名について：現状nip07での書き込みのみ可能（秘密鍵直接入力による書き込み不可）)"
   },
   "mode": {
     "normal": "通常モード",
