--- a/src/lib/i18n/locales/ja.json
+++ b/src/lib/i18n/locales/ja.json
@@ -103,7 +103,7 @@
   "main": {
     "title": "のすとびうあ",
     "input_public_key": "🔑公開鍵(public key)",
-    "publish": "nsecはブラウザに保存されません, \nnip07拡張機能を入れている場合はnpubの入力でok, \n拡張機能なし, npub入力の場合は閲覧限定",
+    "publish": "nsecはブラウザに保存されません, npub入力でNIP07もNIP46も使わない場合は閲覧限定",
     "Nip46_login": "nsecを直接入力するか、拡張機能を使う場合は不要です。"
   },
   "mode": {
