--- a/src/lib/i18n/locales/ja.json
+++ b/src/lib/i18n/locales/ja.json
@@ -104,7 +104,8 @@
     "title": "のすとびうあ",
     "input_public_key": "🔑公開鍵(public key)",
     "publish": "nsecはブラウザに保存されません",
-    "Nip46_login": "nsecを直接入力するか、拡張機能を使う場合は不要です。"
+    "Nip46_login": "nsecを直接入力するか、拡張機能を使う場合は不要です。",
+    "nip07": "NIP-07"
   },
   "mode": {
     "normal": "通常モード",
