--- a/src/lib/i18n/locales/ja.json
+++ b/src/lib/i18n/locales/ja.json
@@ -45,10 +45,11 @@
       "light_switch": "表示モード",
       "share": "myListたち(閲覧中のURL)をnostrで共有",
       "urlandIcon": "アイコン、URLプレビューの表示・非表示",
-      "urlandIconOff": "軽量モード",
-      "urlandIconOn": "通常モード",
+      "urlandIconOff": "軽量",
+      "urlandIconOn": "通常",
       "contentwarning": "コンテントワーニングの全表示",
-      "shareNaddr": "List (naddr) をnostrで共有"
+      "shareNaddr": "List (naddr) をnostrで共有",
+      "data": "通信量"
     },
     "listInfo": {
       "ex": {
