--- a/src/lib/i18n/locales/ja.json
+++ b/src/lib/i18n/locales/ja.json
@@ -109,13 +109,13 @@
     "nip07": "NIP-07"
   },
   "mode": {
-    "normal": "通常モード",
-    "light": "通信量軽量モード",
+    "normal": "通常モードでリストをみる",
+    "light": "軽量モードでリストをみる",
     "light_exp": "【通信量軽量モード】",
     "light_switch": "ライトモード / ダークモードの切り替え",
     "normal_exp": "【通常モード】",
     "normal_exp2": "URLプレビュー(OGP), プロフィールアイコンが表示されます。",
-    "light_exp2": "URLプレビュー(OGP), プロフィールアイコンが表示されません。（通信量が削減できます）",
+    "light_exp2": "URLプレビュー(OGP)を取得せず、 プロフィールアイコンを表示しないため、通信量が削減できます。（外ノスの際にオススメ）",
     "viewMode": "表示モードを選択してください"
   },
   "modalEditTag": {
