--- a/src/lib/i18n/locales/ja.json
+++ b/src/lib/i18n/locales/ja.json
@@ -118,7 +118,8 @@
     "normal_exp": "【通常モード】",
     "normal_exp2": "URLプレビュー(OGP), プロフィールアイコンが表示されます。",
     "light_exp2": "URLプレビュー(OGP)を取得せず、 プロフィールアイコンを表示しないため、通信量が削減できます。（外ノスの際にオススメ）",
-    "viewMode": "表示モードを選択してください"
+    "viewMode": "表示モードを選択してください",
+    "save": "設定を保存して、次回からスキップする"
   },
   "modalEditTag": {
     "list": {
