--- a/src/lib/i18n/locales/ja.json
+++ b/src/lib/i18n/locales/ja.json
@@ -144,5 +144,9 @@
   "icon_description": "アイコンについて",
   "feedback": {
     "setumei": "ランダム生成された鍵で暗号化されてDMで送信されます。"
+  },
+  "nodata": {
+    "iconbefore": "リストが見つかりませんでした。下の",
+    "iconafter": "ボタンをクリックして、[編集]ボタンをクリックして、新規リストを作成してください"
   }
 }
