--- a/src/lib/i18n/locales/ja.json
+++ b/src/lib/i18n/locales/ja.json
@@ -148,5 +148,29 @@
   "nodata": {
     "iconbefore": "リストが見つかりませんでした。下の",
     "iconafter": "ボタンをクリックして、[編集]ボタンをクリックして、新規リストを作成してください"
+  },
+  "kind": {
+    "3": "フォローリスト",
+    "10000": "ミュート",
+    "10001": "ピン",
+    "10002": "リレー",
+    "10003": "ブックマーク",
+    "10004": "コミュニティ",
+    "10005": "パブリックチャット",
+    "10006": "ブロックリレー",
+    "10007": "検索リレー",
+    "10015": "興味・関心",
+    "10030": "絵文字",
+    "10096": "ファイルストレージサーバーリスト",
+    "10101": "wiki のおすすめ著者",
+    "10102": "wiki の推奨リレー",
+    "30000": "フォローセット",
+    "30001": "汎用リスト",
+    "30002": "リレーセット",
+    "30003": "ブックマークセット",
+    "30004": "キュレーションセット",
+    "30008": "バッジ",
+    "30015": "興味・関心 セット",
+    "30030": "絵文字セット"
   }
 }
