--- a/src/lib/i18n/locales/en.json
+++ b/src/lib/i18n/locales/en.json
@@ -169,6 +169,7 @@
     "30002": "relay sets",
     "30003": "bookmark sets",
     "30004": "curation sets",
+    "30007": "kind mute sets",
     "30008": "profile badges",
     "30015": "interest sets",
     "30030": "emoji sets"
