--- a/src/lib/i18n/locales/ja.json
+++ b/src/lib/i18n/locales/ja.json
@@ -169,6 +169,7 @@
     "30002": "リレーセット",
     "30003": "ブックマークセット",
     "30004": "キュレーションセット",
+    "30007": "kindミュートセット",
     "30008": "バッジ",
     "30015": "興味・関心 セット",
     "30030": "絵文字セット"
