--- a/src/lib/i18n/locales/ja.json
+++ b/src/lib/i18n/locales/ja.json
@@ -173,5 +173,10 @@
     "30008": "バッジ",
     "30015": "興味・関心 セット",
     "30030": "絵文字セット"
+  },
+  "kind3": {
+    "relay": "リレー情報",
+    "petname": "ニックネーム（petname）",
+    "npub": "ユーザー（npub）"
   }
 }
