表示の微修正

--- a/src/lib/i18n/locales/en.json
+++ b/src/lib/i18n/locales/en.json
@@ -20,8 +20,8 @@
     },
     "tagList": {
       "title": "Lists",
-      "editTag": "Edit",
-      "noList": "no list. You can create a new list from the Edit button"
+      "editTag": "Delete Existing List / Create New List",
+      "noList": "no list."
     },
     "listInfo": {
       "ex": {
