--- a/src/lib/i18n/locales/ja.json
+++ b/src/lib/i18n/locales/ja.json
@@ -27,7 +27,7 @@
       "title": "リストの編集",
       "body": "新規リストの作成",
       "editTag": "編集",
-      "kind": "eタグ指定kind5での削除（上記Delete Listは空行列での上書き）",
+      "kind": "このボタンはe/aタグ指定のkind:5で削除します。上のDelete Listはタグを空配列で上書きします。",
       "kindexp": "kind5による削除を行った場合、古いイベントが残っている場合は再読み込みをすると古いイベントが表示されることがあります"
     },
     "deleteTag": {
